--- a/app.json
+++ b/app.json
@@ -22,6 +22,16 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    
+    "compilerOptions": {
+      "jsx": "react"
+    },
+    "compilerOptions": {
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true
+  }
+    
   }
 }
